# Fractal-Drawing

./: .gitignore  CMakeLists.txt  README.md  fractaldraw.h  fractalform.h  glwidget.h  gui.ui  main.cpp  ui_gui.h
